--- a/static/style.css
+++ b/static/style.css
@@ -4,16 +4,18 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
-    display: flex;
-    justify-content: center;
+    /* display: flex;
+    justify-content: center; */
     align-items: center;
     height: 100vh;
     margin: 0;
 }
 
 .container {
-    background-color: white;
-    padding: 2rem;
+    display: grid;
+    justify-content: center;
+    background-color: rgba(114, 136, 153, 0.966);
+    padding: 20px 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 100%;
